examples/test/testpolicy2056.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2056
  namespace: namespace114
spec:
  podSelector:
    matchLabels:
      key39: value14
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key25: value15
          key39: value10
      podSelector:
        matchLabels:
          key24: value36
          key35: value33
          key11: value34
